force-app/main/default/objects/Rents__c/Rents__c.object-meta.xml
<CustomObject>
    <label>Rent</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Rent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rent</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>