force-app/main/default/objects/Rents__c/fields/Financial_Analyses__c.field-meta.xml
<CustomField>
    <fullName>Financial_Analyses__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Analyses</label>
    <referenceTo>Financial_Analyses__c</referenceTo>
    <relationshipLabel>Rent</relationshipLabel>
    <relationshipName>Rent</relationshipName>
    <type>Lookup</type>
</CustomField>