force-app/main/default/objects/Rents__c/fields/Lease_Month__c.field-meta.xml
<CustomField>
    <fullName>Lease_Month__c</fullName>
    <formula>IF(  Rent_Schedule__c != null, ((YEAR(Rent_Start_Date__c) - YEAR(Rent_Schedule__r.RS_Start_Date__c))*12) + (MONTH(Rent_Start_Date__c) - MONTH( Rent_Schedule__r.RS_Start_Date__c )) 
+ 1, 
((YEAR(Rent_Start_Date__c) - YEAR(Financial_Analyses__r.FA_Start_Date__c))*12) + (MONTH(Rent_Start_Date__c) - MONTH( Financial_Analyses__r.FA_Start_Date__c )) 
+ 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>