force-app/main/default/objects/Rents__c/fields/Lease_Year__c.field-meta.xml
<CustomField>
    <fullName>Lease_Year__c</fullName>
    <formula>CEILING(Lease_Month__c /12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>