force-app/main/default/objects/Rents__c/fields/Relative_Month__c.field-meta.xml
<CustomField>
    <fullName>Relative_Month__c</fullName>
    <formula>IF( 
((YEAR(Rent_Start_Date__c)-YEAR(TODAY()))*12) + (MONTH(Rent_Start_Date__c) - MONTH(TODAY())) &lt;= 0, 
    IF(
    DAY(Rent_Start_Date__c) - DAY(TODAY())&lt;1,
    ((YEAR(Rent_Start_Date__c)-YEAR(TODAY()))*12) + (MONTH(Rent_Start_Date__c) - MONTH(TODAY())) -1,
    ((YEAR(Rent_Start_Date__c)-YEAR(TODAY()))*12) + (MONTH(Rent_Start_Date__c) - MONTH(TODAY())) +1
    ),
((YEAR(Rent_Start_Date__c)-YEAR(TODAY()))*12) + (MONTH(Rent_Start_Date__c) - MONTH(TODAY()))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relative Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>