force-app/main/default/objects/Rents__c/fields/Relative_Year__c.field-meta.xml
<CustomField>
    <fullName>Relative_Year__c</fullName>
    <formula>CEILING(Relative_Month__c/12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relative Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>