force-app/main/default/objects/Rents__c/fields/Rent_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Rent_per_Month__c</fullName>
    <label>Rent per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>