force-app/main/default/objects/Rents__c/fields/Rent_RSF__c.field-meta.xml
<CustomField>
    <fullName>Rent_RSF__c</fullName>
    <label>Rent RSF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>