force-app/main/default/objects/Rents__c/fields/Rent_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Rent_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rent Schedule</label>
    <referenceTo>Rent_Schedule__c</referenceTo>
    <relationshipLabel>Rent</relationshipLabel>
    <relationshipName>Rent</relationshipName>
    <type>Lookup</type>
</CustomField>