force-app/main/default/objects/Rents__c/fields/Rent_Type__c.field-meta.xml
<CustomField>
    <fullName>Rent_Type__c</fullName>
    <label>Rent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Rent</fullName>
            </value>
            <value>
                <fullName>Operating Expenses</fullName>
            </value>
            <value>
                <fullName>Real Estate Taxes</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Janitorial</fullName>
            </value>
            <value>
                <fullName>Free Rent</fullName>
            </value>
            <value>
                <fullName>Rent Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>